Animal track spacing sorted. Text overflow issue sorted - hopelik nou reg :)

--- a/www/css/main-portrait.css
+++ b/www/css/main-portrait.css
@@ -866,6 +866,7 @@ font-size: 15px;
 color: #fff;
 text-shadow: 1px 1px 2px #000;
 line-height: inherit;
+min-width: 400px !important;
 /* padding-top: 15px; */
 /* margin-top: -15px; */
 /* display: table-cell; */        
