--- a/www/css/main.css
+++ b/www/css/main.css
@@ -360,6 +360,32 @@ footer-controls {
     /* padding-bottom: 40px; */
 }
 
+.audiocontent {
+    width: auto;
+
+    position: absolute;
+    color: #2e2a2b;
+    height: 100%;
+    /* width: 100%; */
+    overflow-wrap: normal;
+    margin-bottom: 50px;
+    overflow-y: auto;
+    background-color: #cbc9c5;
+    //padding: 20px 0 20px 20px;
+    margin-left: 20px;
+    /*right: 100px;*/
+
+    left: -128px; /* This is used for the panel slider */
+    /* padding-right: 128px; */
+    -webkit-overflow-scrolling: touch; /* This gives us scrollbars. */
+    position: fixed; /* This means we don't have to worry about overflow issues */
+    -webkit-transition: left 0.2s ease-in;
+    transition: left 0.2s ease-in;
+    /* padding-bottom: 40px; */
+}
+
+
+
 .profile-content.left {
     /* width: initial; */
     left: 0px !important;
@@ -447,7 +473,7 @@ footer-controls {
     
 
 
-width: 11%;
+width: 128px;
 /*    //height: 828px;*/
     position: absolute;
     background-repeat: no-repeat;
@@ -968,11 +994,11 @@ margin: 20px 0 0 0px;
     position: absolute;
     z-index: 3002;
     overflow: hidden;
-    max-width: 298px;
+    /* max-width: 298px; */
 /*    //background-color: lightgray;*/
     border: none;
-    margin: 0px 0 0 30px;
-    width: 298px;
+    margin: 0px 0 0 25px;
+    width: 40%;
     background-color: rgba(47, 44, 50, 0.9);
     display: none; /* // hide by default, must be last style*/
 }
@@ -1009,9 +1035,9 @@ margin: 20px 0 0 0px;
     z-index: 5000;
     overflow-y: scroll;
     overflow-x:  hidden;
-    max-width: 320px;
-    width: 320px;
-    right: 20px;
+    /* max-width: 320px; */
+    width: 40%;
+    right: 0px;
 /*    //background-color: lightgray;*/
     border: none;
     margin: 0px 30px 0 0;
@@ -1123,18 +1149,20 @@ margin: 20px 0 0 0px;
 }
 
 .audio-track {
-    padding-left: 10px;
+    padding-left: 30px;
 /*    //padding-top: 25px;
     //background-color: lightgray;*/
+    /* padding-right: 45%; */
     background: url('../resources/buttons/navigation/soundbg.png');
     background-repeat: repeat-x;
+    /* background-size: 100%; */
     height: 60px;
-
     vertical-align: middle;
     color: #fff;
     text-shadow: 1px 1px 2px #000;
     line-height: 55px;
-    /* width: 100%; */
+    min-width: 900px !important;
+    min-width: 100%;
     /* display: table-cell; */    
     /* vertical-align: middle; */    
     /* text-align: center; */
@@ -1142,6 +1170,20 @@ margin: 20px 0 0 0px;
 
 .question {
     width: 650px;
+}
+
+.question-par {
+    display: block;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 2px #000;
+    text-align: center;
+    position: absolute;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+
+    width: 555px;
+    left: 50%; /* centre div */
+    margin-left:-280px; /* half of the width */
 }
 
 /*// Game styling ================================================================*/
